force-app/main/default/objects/Case/fields/CaseCategory__c.field-meta.xml
<CustomField>
    <fullName>CaseCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Category</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 AND 3) OR (4 AND 5)</booleanFilter>
        <filterItems>
            <field>Case_Segment__c.Parent__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>Case_Segment__c.CaseRecordType__c</field>
            <operation>equals</operation>
            <value>Tier 1</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tier 1</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tier 2</value>
        </filterItems>
        <filterItems>
            <field>Case_Segment__c.CaseRecordType__c</field>
            <operation>equals</operation>
            <value>Tier 2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Segment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>