force-app/main/default/objects/Case/fields/CaseSubtype__c.field-meta.xml
<CustomField>
    <fullName>CaseSubtype__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Subtype</label>
    <referenceTo>Case_Segment__c</referenceTo>
    <relationshipLabel>Cases (Case Subtype)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>