force-app/main/default/objects/Case/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Segment__c.Parent__c</field>
            <operation>equals</operation>
            <valueField>$Source.CaseCategory__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Segment__c</referenceTo>
    <relationshipLabel>Cases (Case Type)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>