force-app/main/default/objects/Case/recordTypes/Tier_1.recordType-meta.xml
<RecordType>
    <fullName>Tier_1</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Tier 1</label>
</RecordType>