force-app/main/default/objects/Case/recordTypes/Tier_2.recordType-meta.xml
<RecordType>
    <fullName>Tier_2</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Tier 2</label>
</RecordType>