force-app/main/default/objects/Case/recordTypes/Tier_3.recordType-meta.xml
<RecordType>
    <fullName>Tier_3</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Tier 3</label>
</RecordType>